fix top menu flicker

--- a/css/style.css
+++ b/css/style.css
@@ -21,18 +21,16 @@
     background-color: #35444f; 
     margin: 0 0 50px;
     text-align: center;
-    
 }
 
 .top-menu ul {
     display: inline-block;
-    margin: 0 200px;
     padding-left: 0;
     list-style-type: none;
-    margin: 0;
 }
 
 .top-menu ul li {
+    box-sizing: border-box;
     padding: 26px 41px;
     display: inline-block;
     transition: background-color 0.3s;
@@ -40,6 +38,7 @@
 
 .top-menu ul li:hover {
     background-color: #222f3a;
+    padding: 26px 40px;
     border-right: 1px solid white;
     border-left: 1px solid white;    
 }
